fix project credit spacing on mobile. closes #117

--- a/less/oscars.less
+++ b/less/oscars.less
@@ -123,7 +123,7 @@
 	.film-info, .proj-info {
 		padding-left: 0px;
 		padding-right: 0px;
-		& h3, & p { text-indent: 20px; }
+		& h3, & p { margin-left: 20px; margin-right: 20px; }
 	}
 
 	#film-list {
